@@ -4,6 +4,7 @@ import org.example.bitirmeprojesi.entity.OrderItem;
 import org.example.bitirmeprojesi.entity.Orders;
 import org.example.bitirmeprojesi.entity.Product;
 import org.example.bitirmeprojesi.enums.Size;
+import org.example.bitirmeprojesi.enums.StockState;
 import org.example.bitirmeprojesi.exception.ErrorMesage;
 import org.example.bitirmeprojesi.exception.error.InsufficientStockException;
 import org.springframework.stereotype.Component;
@@ -27,10 +28,14 @@ public class OrderValidator {
         List<Product> products = orderItems.stream()
                 .map(OrderItem::getProduct)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         for (Product product : products) {
             Map<Size, Integer> productQuantities = product.getQuantity();
+
+            if(product.getStockState().equals(StockState.UNAVAILABLE)){
+                throw new InsufficientStockException(ErrorMesage.INSUFFICIENT_STOCK_ERROR);
+            }
 
             Map<Size, Integer> orderedQuantitiesPerSize = orderItems.stream()
                     .filter(orderItem -> orderItem.getProduct().getId().equals(product.getId()))
